# goldflipper

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.yaml  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  PlayCreationTool.py  PlayTemplate  README.md  TRAILING_STOPS_IMPLEMENTATION_PLAN.md  ToDo.md  ToDo.txt  UPGRADE_PLAN.md  __init__.py  __init__.py.old  bootstrap.ps1  config.py  directory_structure.txt  docker-compose.yml  goldflipper.py  install_service.bat  launch_goldflipper.bat  launch_goldflipper.ps1  nuitka-project.py  pyproject.toml  pyrightconfig.json  refactor_imports.py  requirements.txt  requirements.txt.old  run_console.bat  run_goldflipper.py  run_goldflipper.spec  runtime_hook.py  setup.py  tmp_check.py)
.claude/: settings.local.json
.github/workflows/: ci.yml  pylint.yml
data/: about.txt
dev-notes/: DB_MIGRATION_NOTES.md  MIGRATION_NOTES.md  WEM_BUG_FIX_SUMMARY.md  response.json
docs/: DEVELOPMENT.md  MSI_INSTALLER.md  MSI_INSTALLER_DEVELOPMENT_CHAT.md  WINDOWS_INSTALLER.md  api_reference.md  developer_guide.md  update-mechanism-todo.md
docs/migration/: current-config.md  nuitka-requirements.md  package-data-mapping.md  package-structure.txt  requirements-original.txt  setup-original.py  testing-checklist.md  uv-installed-packages.txt
goldflipper/: __init__.py  alpaca_client.py  changes_summary.txt  core-BEFORE-LOGGING-12-20-2024.py  core-original.py  core-tag4.py  core.py  first_run_db_setup.py  first_run_setup.py  goldflipper_tui.py  goldflipper_tui.spec  goldflipper_tui_NEW.py  goldflipper_tui_NEW.py.old  goldflipper_web.spec  json_parser.py  launcher.py  move_functions_fix_note.txt  run.py  runOLD.py  run_multi.py  startup_test.py  trailing.py
goldflipper/chart/: __init__.py  about.md  about.txt  base.py  candlestick.py  chart_viewer.py  example.py
goldflipper/config/: __init__.py  config.py  settings.yaml  settings_template.yaml
goldflipper/data/: __init__.py
goldflipper/data/greeks/: __init__.py  base.py  (+19 more)
goldflipper/database/: __init__.py  connection.py  models.py  repositories.py
goldflipper/docs/: DEPRECATED_CODE_CANDIDATES.md  MULTI_STRATEGY_IMPLEMENTATION.md  STRATEGY_DEVELOPMENT_GUIDE.md
goldflipper/logging/: DOCUMENTATION.md  about.txt  data_backfill_helper.py  logging_docs.md  trade_logger.py  trade_logger_ui.py
goldflipper/mcp_server/: __init__.py  __main__.py  context.py  server.py
goldflipper/plays/: ADBE_20240829_164524.json  test.json  test123.json
goldflipper/reference/: 2025-03-24T19-47_export.csv  2025-03-25T19-14_export.csv  API Template (OR Function) - Copy of Template.csv  API_Template_ 2025_OptionSwings.csv  API_Template_2025_MomentumGap.csv  API_Template_2025_ShortPuts.csv  Play Template - 2025.csv  Play Template - ShortPuts - 2025.csv  WEM 2025.xlsx - Mar 24-28 .csv  abridged-options-trading-basic.ipynb
goldflipper/state/: service_state.json  state_backup_1739505184.json
goldflipper/strategy/: SHORT_PUTS_IMPLEMENTATION_PLAN.md  __init__.py  base.py  capital.py  kegan_spreads.txt  larry_swings.txt  momentum.txt  orchestrator.py  registry.py  risk_management.py  short-puts.md  short_puts.py  swings.txt  trailing.py
goldflipper/tests/: __init__.py  test_dry_run_mode.py  test_orchestrator_unit.py  test_parallel_execution.py
goldflipper/tools/: __init__.py  auto_play_creator.py  configuration.py  get_alpaca_info.py  marketdata_sdk_test.py  multi_market_data.py  option-data-fetcher.py  option_data_fetcher.py  options-data.py  optiontest.py  play-creation-too-BORKEDl.py  play-creation-tool-NEW.py  play-creation-tool-SAVESAVESAVE.py  play-creation-tool-unknown.py  play-creation-tool.py  play-creation-tool_OLD.py  play-csv-ingestion-tool.py  play-csv-selftest.py  play-edit-tool.py  play-template.json  play_creation_tool.py  play_creator_gui.py  play_csv_ingestion_multitool.py  play_csv_ingestion_tool.py  play_validation.py  run_json_fixer.py  short_puts_csv_ingestion_tool.py  system_status.py  test_json_fixer.py  test_yfinance.py  testing-template.json  view_plays.py  view_plays_backup.py  wem_cli.py
goldflipper/trade_logging/: __init__.py  data_backfill_helper.py  logging_docs.md  trade_logger.py  trade_logger_ui.py
goldflipper/utils/: __init__.py  atomic_io.py  display.py  exe_utils.py  json_fixer.py  logging_setup.py  market_holidays.py  resource.py  trading_system_status.py  updater.py
goldflipper/watchdog/: __init__.py  watchdog_manager.py
installer/: License.rtf  goldflipper.wxs
old-versions/: big-play-template.json  core-1634.py  core-2024-09-07-1215pm.py  core-2024-09-11-2049.py  play-creation-tool-1639.py
old-versions/testing/: SPY_CALL_562_562_09_25_2024.json  SPY_CALL_562_562_09_27_2024.json  SPY_CALL_575_562_09_25_2024.json  SPY_CALL_575_562_09_27_2024.json  SPY_PUT_562_575_09_25_2024.json  SPY_PUT_562_575_09_27_2024.json  SPY_PUT_575_575_09_25_2024.json  SPY_PUT_575_575_09_27_2024.json  batch_plays.py
scripts/: bootstrap.ps1  build_msi.py  build_nuitka.py  build_nuitka_dev.py  dev.bat  setup_dev_cert.ps1  test_migration.ps1
src/: __init__.py
src/service/: service_wrapper.py
src/state/: __init__.py  state_manager.py
technical-analysis/: ta.txt
tests/: conftest.py  statusCheck.py  test_capital_manager.py  test_dry_run_mode.py  test_market_data.py  test_orchestrator_unit.py  test_parallel_execution.py  test_providers.py  test_strategy_evaluation.py
web/: DB_MIGRATION_NOTES.md  MARKET_HOLIDAYS_IMPROVEMENTS.md  MIGRATION_NOTES.md  STREAMLIT_PROGRESS.md  STREAMLIT_PROGRESS.md.old  __init__.py  app.py  entrypoint.py  launch_web.bat  launch_web.py  requirements.txt.old
web/components/: __init__.py  hps_analysis.py  kep_analysis.py  wem_visualizations.py
web/pages/: 0_⚙️_Setup.py  0_🏠_Home.py  10_✅_HPS.py  1_📊_Dashboard.py  2_💹_Trading.py  3_📈_Analysis.py  4_⚙️_Settings.py  5_📊_Database.py  6_📊_WEM.py  6_📊_WEM.py.old  7_📊_Chart_Export.py  8_📊_Momentum.py  9_🎯_KEP.py  vix-work-TEMP.md
web/utils/: README.md  __init__.py  settings_manager.py  settings_mapper.py  table_utils.py
web/wem_template/: WEM 2025 Template.htm  WEM 2025 Template.xlsx  default_tickers.txt
(+102 files in other folders)
