[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goldflipper"
version = "0.2.2"
description = "A semi-autonomous options trading system on Alpaca."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Proprietary" }
authors = [
    { name = "Iliya Yaroshevskiy", email = "purpleafmanagement@gmail.com" },
]
dependencies = [
    "alpaca-py>=0.42.0",
    "yfinance>=0.2.54",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "ta>=0.10.0",
    "textual>=1.0.0",
    "psutil>=5.9.0",
    "nest-asyncio>=1.5.0",
    "pywin32; sys_platform == 'win32'",
    "tkinterdnd2>=0.3.0",
    "requests>=2.25.0",
    "charset-normalizer>=3.2.0",
    "urllib3>=1.26.0",
    "PyYAML>=6.0.1",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "mplfinance>=0.12.10b0",
    "XlsxWriter>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "nuitka>=2.0",
]

[project.scripts]
goldflipper = "goldflipper.run:main"

[project.urls]
Homepage = "https://github.com/Zaroganos/goldflipper"
"Bug Reports" = "https://github.com/Zaroganos/goldflipper/issues"
Documentation = "https://github.com/Zaroganos/goldflipper#readme"

[tool.hatch.build.targets.wheel]
packages = ["goldflipper"]

[tool.hatch.build.targets.wheel.force-include]
"goldflipper/tools/play-template.json" = "goldflipper/tools/play-template.json"
"goldflipper/config/settings_template.yaml" = "goldflipper/config/settings_template.yaml"
"goldflipper/reference" = "goldflipper/reference"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["goldflipper", "src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["goldflipper", "src"]
exclude = ["**/__pycache__", "**/.venv"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

