[project]
name = "goldflipper-dashboard"
version = "0.1.6"
description = "A Python program for semi-autonomous options trading on Alpaca."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Proprietary" }
authors = [
  { name = "Iliya Yaroshevskiy", email = "purpleafmanagement@gmail.com" }
]
keywords = [
  "algorithmic trading",
  "alpaca",
  "finance",
  "stocks",
  "options",
  "trading"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: Microsoft :: Windows",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Financial :: Investment"
]
dependencies = [
  "alpaca-py>=0.43.2",
  "yfinance>=0.2.54",
  "pandas>=2.3.3",
  "numpy>=2.4.0,<3.0",
  "matplotlib>=3.10.0",
  "seaborn>=0.13.0",
  "scipy>=1.16.0",
  "ta>=0.11.0",
  "textual>=6.12.0",
  "psutil>=7.2.0",
  "nest-asyncio>=1.6.0",
  "pyyaml>=6.0.1",
  "colorama>=0.4.6",
  "rich>=13.0.0",
  "mplfinance>=0.12.0",
  "xlsxwriter>=3.1.0",
  "openpyxl>=3.1.0",
  "pywin32; sys_platform == 'win32'",
  "tkinterdnd2>=0.3.0; sys_platform == 'win32'",
  "streamlit>=1.50.0",
  "plotly>=6.3.0",
  "python-dotenv>=1.2.0",
  "duckdb>=1.3.0",
  "duckdb-engine>=0.15.0",
  "sqlalchemy>=2.0.0,<3.0",
  "alembic>=1.15.0",
  "python-dateutil>=2.9.0",
  "requests>=2.32.4",
  "pandas-market-calendars>=4.6.1",
  "vix-utils>=0.1.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2"
]

[project.scripts]
goldflipper = "goldflipper.run:main"
goldflipper-web = "goldflipper.web.app:main"
goldflipper-migrate = "goldflipper.database.migrations.migrate_data:run_migration"

[project.urls]
Homepage = "https://github.com/Zaroganos/goldflipper"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "jupyter>=1.0.0",
  "notebook>=7.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["goldflipper"]